@@ -114,54 +114,114 @@
 (defgeneric slot-definition-name (slotdef)
   (:method ((slotdef slot-definition))
     (sys::%record-ref slotdef *<slot-definition>-name-location*)))
+;; Not in MOP.
+(defun (setf slot-definition-name) (new-value slotdef)
+  (assert (typep slotdef 'slot-definition))
+  (setf (sys::%record-ref slotdef *<slot-definition>-name-location*) new-value))
+
+;; Not in MOP.
+(defun slot-definition-inheritable-initer (slotdef)
+  (assert (typep slotdef 'slot-definition))
+  (sys::%record-ref slotdef *<slot-definition>-inheritable-initer-location*))
+(defun (setf slot-definition-inheritable-initer) (new-value slotdef)
+  (assert (typep slotdef 'slot-definition))
+  (setf (sys::%record-ref slotdef *<slot-definition>-inheritable-initer-location*) new-value))
 
 ;; MOP p. 84
 (fmakunbound 'slot-definition-initform)
 (defgeneric slot-definition-initform (slotdef)
   (:method ((slotdef slot-definition))
     (inheritable-slot-definition-initform (sys::%record-ref slotdef *<slot-definition>-inheritable-initer-location*))))
+;; Not in MOP.
+(defun (setf slot-definition-initform) (new-value slotdef)
+  (assert (typep slotdef 'slot-definition))
+  (setf (inheritable-slot-definition-initform (sys::%record-ref slotdef *<slot-definition>-inheritable-initer-location*)) new-value))
 
 ;; MOP p. 84
 (fmakunbound 'slot-definition-initfunction)
 (defgeneric slot-definition-initfunction (slotdef)
   (:method ((slotdef slot-definition))
     (inheritable-slot-definition-initfunction (sys::%record-ref slotdef *<slot-definition>-inheritable-initer-location*))))
+;; Not in MOP.
+(defun (setf slot-definition-initfunction) (new-value slotdef)
+  (assert (typep slotdef 'slot-definition))
+  (setf (inheritable-slot-definition-initfunction (sys::%record-ref slotdef *<slot-definition>-inheritable-initer-location*)) new-value))
 
 ;; MOP p. 84
 (fmakunbound 'slot-definition-initargs)
 (defgeneric slot-definition-initargs (slotdef)
   (:method ((slotdef slot-definition))
     (sys::%record-ref slotdef *<slot-definition>-initargs-location*)))
+;; Not in MOP.
+(defun (setf slot-definition-initargs) (new-value slotdef)
+  (assert (typep slotdef 'slot-definition))
+  (setf (sys::%record-ref slotdef *<slot-definition>-initargs-location*) new-value))
 
 ;; MOP p. 85
 (fmakunbound 'slot-definition-type)
 (defgeneric slot-definition-type (slotdef)
   (:method ((slotdef slot-definition))
     (sys::%record-ref slotdef *<slot-definition>-type-location*)))
+;; Not in MOP.
+(defun (setf slot-definition-type) (new-value slotdef)
+  (assert (typep slotdef 'slot-definition))
+  (setf (sys::%record-ref slotdef *<slot-definition>-type-location*) new-value))
 
 ;; MOP p. 84
 (fmakunbound 'slot-definition-allocation)
 (defgeneric slot-definition-allocation (slotdef)
   (:method ((slotdef slot-definition))
     (sys::%record-ref slotdef *<slot-definition>-allocation-location*)))
+;; Not in MOP.
+(defun (setf slot-definition-allocation) (new-value slotdef)
+  (assert (typep slotdef 'slot-definition))
+  (setf (sys::%record-ref slotdef *<slot-definition>-allocation-location*) new-value))
+
+;; Not in MOP.
+(defun slot-definition-inheritable-doc (slotdef)
+  (assert (typep slotdef 'slot-definition))
+  (sys::%record-ref slotdef *<slot-definition>-inheritable-doc-location*))
+(defun (setf slot-definition-inheritable-doc) (new-value slotdef)
+  (assert (typep slotdef 'slot-definition))
+  (setf (sys::%record-ref slotdef *<slot-definition>-inheritable-doc-location*) new-value))
+
+;; Not in MOP.
+(defun slot-definition-documentation (slotdef)
+  (assert (typep slotdef 'slot-definition))
+  (inheritable-slot-definition-documentation (sys::%record-ref slotdef *<slot-definition>-inheritable-doc-location*)))
+(defun (setf slot-definition-documentation) (new-value slotdef)
+  (assert (typep slotdef 'slot-definition))
+  (setf (inheritable-slot-definition-documentation (sys::%record-ref slotdef *<slot-definition>-inheritable-doc-location*)) new-value))
 
 ;; MOP p. 85
 (fmakunbound 'slot-definition-readers)
 (defgeneric slot-definition-readers (slotdef)
   (:method ((slotdef direct-slot-definition))
     (sys::%record-ref slotdef *<direct-slot-definition>-readers-location*)))
+;; Not in MOP.
+(defun (setf slot-definition-readers) (new-value slotdef)
+  (assert (typep slotdef 'direct-slot-definition))
+  (setf (sys::%record-ref slotdef *<direct-slot-definition>-readers-location*) new-value))
 
 ;; MOP p. 85
 (fmakunbound 'slot-definition-writers)
 (defgeneric slot-definition-writers (slotdef)
   (:method ((slotdef direct-slot-definition))
     (sys::%record-ref slotdef *<direct-slot-definition>-writers-location*)))
+;; Not in MOP.
+(defun (setf slot-definition-writers) (new-value slotdef)
+  (assert (typep slotdef 'direct-slot-definition))
+  (setf (sys::%record-ref slotdef *<direct-slot-definition>-writers-location*) new-value))
 
 ;; MOP p. 86
 (fmakunbound 'slot-definition-location)
 (defgeneric slot-definition-location (slotdef)
   (:method ((slotdef effective-slot-definition))
     (sys::%record-ref slotdef *<effective-slot-definition>-location-location*)))
+;; Not in MOP.
+(defun (setf slot-definition-location) (new-value slotdef)
+  (assert (typep slotdef 'effective-slot-definition))
+  (setf (sys::%record-ref slotdef *<effective-slot-definition>-location-location*) new-value))
 
 
 ;; MOP p. 45
