@@ -1,3 +1,8 @@
+2004-05-15  Bruno Haible  <bruno@clisp.org>
+
+	* clos-slotdef3.lisp: Redefine the accessor functions with added
+	type-checking.
+
 2004-05-09  Bruno Haible  <bruno@clisp.org>
 
 	* lispbibl.d (Hashtable): Change type of ht_size to uintL.
